<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_summary"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/btnSaveSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnCancelSummary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/cancel"
    android:backgroundTint="@color/black"
    android:textColor="@color/white"
    android:layout_marginTop="10dp" />





</LinearLayout>
