<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cv_builder"
            android:textStyle="bold"
            android:textSize="26sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginBottom="12sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/black"

             />

        <ImageView
            android:id="@+id/imgProfilePicture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_profile_placeholder"
            android:scaleType="centerCrop"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/ppic" />


        <include layout="@layout/section_card" android:id="@+id/name_section" android:tag="Name" />
        <include layout="@layout/section_card" android:id="@+id/summary_section" android:tag="Summary" />
        <include layout="@layout/section_card" android:id="@+id/education_section" android:tag="Education" />
        <include layout="@layout/section_card" android:id="@+id/experience_section" android:tag="Experience" />
        <include layout="@layout/section_card" android:id="@+id/certifications_section" android:tag="Certifications" />
        <include layout="@layout/section_card" android:id="@+id/references_section" android:tag="References" />


                     <Button
                android:id="@+id/btnExport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generate_cv"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                         android:layout_gravity="end"

                         android:layout_marginBottom="32sp"/>

    </LinearLayout>
</ScrollView>
